<resources>
    <string name="app_name">Lab2.2</string>
    <string name="repeat_game_button">З повтореннями</string>
    <string name="no_repeat_game_button">Без повторень</string>
    <string name="true_text">Вірно</string>
    <string name="false_text">Не вірно</string>
    <string name="result_text">Кількість правильних відповідей:</string>
    <string name="continue_button">Продовжити</string>

</resources>