<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <Button
        android:id="@+id/with_repeat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/gray"
        android:text="@string/repeat_game_button" />

    <Button
        android:id="@+id/without_repeat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/gray"
        android:text="@string/no_repeat_game_button" />

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_text"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/correct_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_text"
            android:backgroundTint="@color/gray"
            android:layout_marginEnd="10dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/incorrect_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_text"
            android:backgroundTint="@color/gray"
            android:visibility="gone"/>

    </LinearLayout>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        android:backgroundTint="@color/gray"
        android:visibility="gone"/>

</LinearLayout>